[package]
name = "pulseaudio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulse = { version = "2.28.1", package = "libpulse-binding" }
psimple = { version = "2.28.1", package = "libpulse-simple-binding" }
